# agentgate

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: compliance.md  getting-started.md  policies.md  threat-feed.md  use-cases.md
examples/: openclaw_integration.py
examples/policies/: developer.yaml  enterprise.yaml
mcp_firewall/: __init__.py  __main__.py  cli.py  config.py  models.py  scanner.py  sdk.py
mcp_firewall/alerts/: __init__.py  engine.py  slack.py  syslog.py  webhook.py
mcp_firewall/audit/: logger.py  signer.py
mcp_firewall/compliance/: report.py
mcp_firewall/dashboard/: __init__.py  app.py  server.py
mcp_firewall/pipeline/: __init__.py  base.py  runner.py
mcp_firewall/pipeline/inbound/: __init__.py  chain_detector.py  egress.py  human_approval.py  injection.py  kill_switch.py  policy.py  rate_limiter.py
mcp_firewall/pipeline/outbound/: __init__.py  pii.py  secrets.py
mcp_firewall/proxy/: __init__.py  stdio.py
mcp_firewall/threatfeed/: __init__.py  loader.py
mcp_firewall/threatfeed/rules/: cloud-metadata.yaml  cred-harvest.yaml  exfil-dns.yaml  exfil-webhook.yaml  reverse-shell.yaml
tests/: test_phase2.py  test_phase3.py  test_phase4.py  test_pipeline.py  test_sdk.py
